public/css/dashboard/style.css
td.buttons-pos {
    display: inline-flex;
    border: 0;
}
td.button-pos a {
    margin-right: 15px;
}
.inputfornotification {
    width: 500px;
    padding-bottom: 200px;
    font-size: 16px;
}
a.btn.btn-success.btn-icon-split.m1 {
    margin-right: 10px;
}

/* Messeger for teacher and parents */
.container-mess{
    width: 100%;
    height: 70vh;
    margin:auto;
    max-height: 70vh !important;
}
img { 
    max-width:100%;
}
.inbox_people {
  background: linear-gradient(to top, #021B79, #0575E6);
  float: left;
  overflow: hidden;
  width: 20%; 
  box-shadow: 1px 1px 15px 1px #000;
}
.inbox_msg {
  clear: both;
}
.top_spac { 
    margin: 20px 0 0;
}
.recent_heading {
    float: left; 
    width:20%;
}
.srch_bar {
  display: inline-block;
  text-align: right;
  width: 60%;
}
.headind_srch { 
  padding:10px 29px 10px 20px; 
  overflow:hidden; 
  border-bottom:1px solid #0575E6;
}

.recent_heading h4 {
  color: #fff;
  font-size: 21px;
  margin: auto;
}
.srch_bar input { 
  border:1px solid #0575E6; 
  border-width:0 0 1px 0; 
  width:80%; 
  padding:2px 0 4px 6px; 
  background:none;
}
.srch_bar .input-group-addon button {
  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
  border: medium none;
  padding: 0;
  color: #fff;
  font-size: 18px;
}
.srch_bar .input-group-addon { 
  margin: 0 0 0 -27px;
}

.chat_ib h5 { 
    font-size:15px; 
    color:#fff; 
    margin:0 0 8px 0;
}
.chat_ib h5 span { 
    font-size:13px; 
    float:right;
}
.chat_ib p { 
    font-size:14px; 
    color:#fff; 
    margin:auto
}
.chat_img {
  float: left;
  width: 11%;
}
.chat_ib {
  float: left;
  padding: 0 0 0 15px;
  width: 88%;
}
.chat_people { 
    overflow:hidden; 
    clear:both;
}

.chat_list {
  border-bottom: 1px solid #0575E6 ;
  margin: 0;
  padding: 18px 16px 10px;
  cursor: pointer;
  font-size: 20px;
}

.chat_list:hover {
  background-color: #0575E6;
}

.inbox_chat { 
    height: 70vh !important;
}

.active_chat { 
    background:#ebebeb;
}

.incoming_msg_img {
  display: inline-block;
  width: 6%;
}
.received_msg {
  display: inline-block;
  padding: 0 0 0 10px;
  vertical-align: top;
  width: 92%;
 }
 .name_chat {
   width: 100%;
   padding: 20px;
   color: #FFF;
   text-align: center;
   font-size: 26px;
 }
 .received_withd_msg p {
  background: #173477 none repeat scroll 0 0;
  border-radius: 3px;
  color: #ddd;
  font-size: 14px;
  margin: 0;
  padding: 15px 10px;
  width: 100%;
}
.time_date {
  color: #ddd;
  display: block;
  font-size: 12px;
  margin: 8px 0 0;
}
.received_withd_msg { 
    width: 57%;
}
.mesgs {
  float: right;
  width: 70%;
  background: linear-gradient(to top, #021B79, #0575E6);
  box-shadow: 1px 1px 15px 1px #000;
}
.pad-mesgs {
  padding: 30px 15px 0 25px;
}

 .sent_msg p {
  background: #0575E6 none repeat scroll 0 0;
  border-radius: 3px;
  font-size: 14px;
  margin: 0; color:#fff;
  padding: 15px 10px;
  width:100%;
}
.outgoing_msg { 
    overflow:hidden; 
    margin:26px 0 26px;
}
.sent_msg {
  float: right;
  width: 46%;
}
.input_msg_write input {
  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
  border: medium none;
  color: #fff;
  font-size: 15px;
  min-height: 48px;
  width: 100%;
}

.type_msg {
    border-top: 1px solid #0575E6;
    position: relative;
}
.msg_send_btn {
  background: #0575E6 none repeat scroll 0 0;
  border: medium none;
  border-radius: 50%;
  color: #fff;
  cursor: pointer;
  font-size: 17px;
  height: 33px;
  position: absolute;
  right: 0;
  top: 11px;
  width: 33px;
}
.messaging { 
    padding: 0 0 50px 0;
    height: 70vh !important;
}
.msg_history {
  min-height: 50vh;  
  max-height: 70vh !important;
  overflow-y: auto;
}

.ring {
  display: none; 
}

.reqmargin {
  margin: 0;
}

/* responsive chat mobile */
@media only screen and (max-width: 600px) {
  .inbox_people {
    display: block;
    width: 100%;
  }
  .mesgs {
    width: 100%;
    display: block;
  }
  .messaging {
    height: 20vh !important;
  }
}

::-webkit-scrollbar {
  width: 10px;
}
::-webkit-scrollbar-track {
  background: transparent; 
}
::-webkit-scrollbar-thumb {
  background: #0575E6; 
}
::-webkit-scrollbar-thumb:hover {
  background: rgb(56, 146, 236); 
}

